# SIC

learn/: tokenizers.ipynb
task/: main.py  pyproject.toml
task/qqdrant/: chat.py  generator.py  test_docs.json  vectorstore.py
task/qqdrant/chroma_db/: chroma.sqlite3
