[project]
name = "task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "faker>=40.4.0",
    "langchain>=1.2.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-milvus>=0.3.3",
    "langchain-ollama>=1.0.1",
    "langchain-pinecone>=0.2.13",
    "langchain-postgres>=0.0.16",
    "langchain-qdrant>=1.1.0",
    "ollama>=0.6.1",
    "pinecone-client>=6.0.0",
    "pymilvus[milvus-lite]>=2.6.8",
    "setuptools>=82.0.0",
    "sqlalchemy>=2.0.46",
]
